@@ -5,6 +5,11 @@ AM_INIT_AUTOMAKE([-Wall gnu check-news color-tests 1.11])
 AC_CONFIG_SRCDIR([src/dlvhex.cpp])
 AC_CONFIG_HEADER([include/config.h])
 
+# provide package and ABI version to substitute in .in files and to config.h
+DLVHEX2_DEFINE_VERSION([DLVHEX],[$PACKAGE_VERSION])
+# for ABI and library versioning,
+# see https://sourceforge.net/apps/trac/dlvhex/wiki/LibraryVersions
+DLVHEX2_DEFINE_VERSION([DLVHEX2_ABI],[7.0.0])
 
 AC_CANONICAL_HOST
 
@@ -459,14 +464,6 @@ DX_XML_FEATURE([OFF])
 DX_PDF_FEATURE([OFF])
 DX_PS_FEATURE([OFF])
 DX_INIT_DOXYGEN([dlvhex], [doxygen.cfg], [doc])
-
-# provide version to config.h
-MAJOR=`echo $PACKAGE_VERSION | sed "s/^\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\1/"`
-MINOR=`echo $PACKAGE_VERSION | sed "s/^\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\2/"`
-MICRO=`echo $PACKAGE_VERSION | sed "s/^\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\3/"`
-AC_DEFINE_UNQUOTED([DLVHEX_VERSION_MAJOR], [$MAJOR], [major version number])
-AC_DEFINE_UNQUOTED([DLVHEX_VERSION_MINOR], [$MINOR], [minor version number])
-AC_DEFINE_UNQUOTED([DLVHEX_VERSION_MICRO], [$MICRO], [micro version number])
 
 # output autogenerated files
 AC_CONFIG_FILES([
