@@ -482,15 +482,18 @@
 #include <boost/unordered_map.hpp>
 
 
-#define PLUGINVERSIONFUNCTION getDlvhexPluginVersion
-#define PLUGINVERSIONFUNCTIONSTRING "getDlvhexPluginVersion"
+#define PLUGINABIVERSIONFUNCTION getDlvhex2ABIVersion
+#define PLUGINABIVERSIONFUNCTIONSTRING "getDlvhex2ABIVersion"
 #define PLUGINIMPORTFUNCTION importPlugin
 #define PLUGINIMPORTFUNCTIONSTRING "importPlugin"
 
 // the following code must be used by plugins to publish their API compatibility
 // we store the version like boost as an integer
-#define IMPLEMENT_PLUGINVERSIONFUNCTION(major,minor,patch) \
-  extern "C" int PLUGINVERSIONFUNCTION() { return major*10000+minor*100+patch; }
+// configure.ac should use DLVHEX2_DEFINE_VERSION([DLVHEX2_ABI],[X.Y.Z])
+// to create the #define'd constants used below
+#define IMPLEMENT_PLUGINABIVERSIONFUNCTION \
+  extern "C" int PLUGINABIVERSIONFUNCTION() { \
+    return DLVHEX2_ABI_VERSION_MAJOR*10000+DLVHEX2_ABI_VERSION_MINOR*100+DLVHEX2_ABI_VERSION_MICRO; }
 
 DLVHEX_NAMESPACE_BEGIN
 
